# python-fastapi-utils

./: .gitignore  LICENSE  README.md  package.base.dockerfile  pyproject.toml
.github/workflows/: release.yml  test.yml
src/surquest/fastapi/schemas/responses/: __init__.py  base.py  info.py  message.py  metadata.py  responses.py  status.py
src/surquest/fastapi/utils/: __init__.py  args.py  auth.py  catcher.py  middleware.py  route.py
src/surquest/fastapi/utils/GCP/: GCP.py  __init__.py  catcher.py  formatter.py  http_context.py  logging.py  middleware.py  tracer.py
test/: pytest.ini
test/utils/: test_catcher.py
